--- a/css/home.css
+++ b/css/home.css
@@ -42,7 +42,8 @@ nav {
     top: 0;
     width: 100%;
     height: max-content;
-    background-color: white;
+    /* background-color: white; */
+    background-color: rgb(125, 56, 171);
     border-bottom: 0.3em solid black;
 
     .nav-wrapper {
@@ -58,16 +59,24 @@ nav {
             height: max-content;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 0.5em;
             cursor: pointer;
+            width: max-content;
+            background-color: white;
+            padding: 0.5em 1.3em;
+            border: 0.15em solid black;
+            border-radius: 1em;
+            box-shadow: -0.25em 0.25em black;
             & img {
-                width: 2.5em;
+                width: 2em;
                 height: fit-content;
                 margin: 0;
+                transform: translateY(0.2em);
             }
             & h1 {
                 margin: 0;
-                font-size: 2.5rem;
+                font-size: 1.8rem;
                 font-weight: 700;
             }
             & span {
@@ -99,12 +108,12 @@ nav a {
     border-radius: 1em;
     box-shadow: -0.25em 0.25em black;
     transform: translate(0.3em, 0.3em);
-    /* color: rgb(125, 56, 171); */
-    color: white;
-    background-color: rgb(125, 56, 171);
+    color: black;
+    background-color: white;
 
     & i {
         padding-right: 0.5em;
+        color: rgb(125, 56, 171);
     }
 }
 
@@ -160,14 +169,19 @@ nav a:hover {
             width: max-content;
             height: max-content;
             padding: 0.5em 1.3em;
-            transition: 0.5s all ease-out;
+            transition: 0.3s all ease-out;
             border: 0.15em solid black;
             border-radius: 1em;
             box-shadow: -0.25em 0.25em black;
             transform: translate(0.3em, 0.3em);
-            color: rgb(125, 56, 171);
+            color: white;
             font-size: 1.3rem;
-            background-color: white;
+            background-color: rgb(125, 56, 171);
+
+            & i {
+                padding-right: 0.5em;
+            }
+
         }
 
         & a:hover {
@@ -385,6 +399,7 @@ nav a:hover {
     position: relative;
     width: 100%;
     /* height: 100%; */
+    height: 80vh;
     background-color: aliceblue;
     display: flex;
     justify-content: center;
@@ -548,7 +563,7 @@ footer {
     display: flex;
     background-color: white;
     /* background-color: aliceblue; */
-    justify-content: space-evenly;
+    justify-content: space-around;
     padding: 2em 0em 2em 0em;
     border-top: 0.5em solid black;
     flex-wrap: wrap;
