--- a/css/home.css
+++ b/css/home.css
@@ -458,7 +458,6 @@ nav a:hover {
     position: relative;
     width: 100%;
     /* height: 100%; */
-    height: 80vh;
     background-color: aliceblue;
     display: flex;
     justify-content: center;
@@ -596,6 +595,10 @@ nav a:hover {
 
     }
 
+}
+
+.signup {
+    height: 70vh;
 }
 
 .bottom {
