--- a/css/home.css
+++ b/css/home.css
@@ -457,6 +457,7 @@ nav a:hover {
 #profile {
     position: relative;
     width: 100%;
+    height: max-content;
     /* height: 100%; */
     background-color: aliceblue;
     display: flex;
