--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,7 @@
   ::-webkit-scrollbar-thumb {
     background-color: rgb(125, 56, 171);
     border-radius: 2em;
+    border: 0.2em solid white;
   }
 
 html {
@@ -42,6 +43,7 @@ nav {
     top: 0;
     width: 100%;
     height: max-content;
+    display: block;
     /* background-color: white; */
     background-color: rgb(125, 56, 171);
     border-bottom: 0.3em solid black;
@@ -95,6 +97,22 @@ nav {
             font-weight: 500;
         }
     }
+}
+
+.elem::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    background-image: url("/assets/spideybg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: grayscale(1);
+    mix-blend-mode: soft-light;
+    opacity: 0.3;
+    pointer-events: none;
 }
 
 nav a {
@@ -160,6 +178,7 @@ nav a:hover {
         width: 50%;
         height: 100%;
         position: relative;
+        border-left: 0.3em solid black;
 
         & img {
             position: absolute;
@@ -204,7 +223,9 @@ nav a:hover {
             height: max-content;
         }
 
-        & span {
+
+
+        & h3 > span {
             font-size: 1.3rem;
             font-weight: 500;
             color: rgb(125, 56, 171);
@@ -215,6 +236,10 @@ nav a:hover {
             font-weight: 500;
             line-height: 1em;
             margin: 0;
+        }
+
+        & h1 > span {
+            color: rgb(125, 56, 171);
         }
 
         & h3 {
@@ -258,7 +283,9 @@ nav a:hover {
     overflow: hidden;
     /* background-color: rgb(125, 56, 171); */
     color: white;
-    padding: 2em 1em 4em 0em;
+    padding: 0em 1em 4em 0em;
+
+    
 
     & h1 {
         width: max-content;
@@ -281,6 +308,43 @@ nav a:hover {
 
     }
 
+    .marquee {
+        display: block;
+        position: relative;
+        width: 100%;
+        height: max-content;
+        padding: 0.5em 0em;
+        background-color: rgb(125, 56, 171);
+        border-bottom: 0.3em solid black;
+        overflow: hidden;
+
+        .marquee-scroll {
+            display: flex;
+            align-items: center;
+            width: 200%;
+            height: max-content;
+            gap: 0.5em;
+            justify-content: space-evenly;
+
+            & i {
+                color: rgb(49, 14, 73);
+                font-size: 2rem;
+                margin: 0;
+                padding: 0;
+            }
+
+            & h1 {
+                color: white;
+                font-size: 1.3rem;
+                margin: 0;
+                padding-right: 1em;
+            }
+
+            
+        }
+
+    }
+
     .wrapper-wrapper {
         width: 100%;
         height: max-content;
@@ -288,6 +352,9 @@ nav a:hover {
         gap: 2em;
 
         .description {
+            border-top: 0.2em solid black;
+            border-right: 0.2em solid black;
+            border-bottom: 0.2em solid black;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -346,6 +413,7 @@ nav a:hover {
       ::-webkit-scrollbar-thumb {
         background-color: rgb(125, 56, 171);
         border-radius: 2em;
+        border: none;
       }
 
     .wrapper {
