--- a/css/home.css
+++ b/css/home.css
@@ -192,6 +192,7 @@ nav a {
     & i {
         padding-right: 0.5em;
         color: var(--primary-color);
+        transition: 0.2s all ease-in;
     }
 }
 
