--- a/css/home.css
+++ b/css/home.css
@@ -371,6 +371,10 @@ nav a:hover {
 
     }
 
+    .marquee-cs {
+        border-top: 0.3em solid var(--black);
+    }
+
     .marquee {
         display: block;
         position: relative;
